--- a/rapport.tex
+++ b/rapport.tex
@@ -26,7 +26,7 @@
 Soit $E_M = \left\{1, 2, 3, 4, 5, 6, 7\right\} $ l'ensemble des machines. \\
 Soit $E_{MP} = \left\{MP1, MP2, MP3\right\} $ l'ensemble des matières premières. \\
 Soit $E_P = \left\{A, B, C, D, E, F\right\} $ l'ensemble des produits. \\
-Soit $B$ le bénifice de l'entreprise. \\
+Soit $B$ le bénéfice de l'entreprise. \\
 Soit $TTH$ le temps de travail hebdomadaire. \\
 Soit $X(i)$ le nombre de produit $i\in E_P$ fait. \\
 Soit $S(p)$ la quantité en stock de la matière première $p\in E_{MP}$. \\
@@ -65,6 +65,25 @@ $$
 
 \section{Optimisation monocritère}
 \subsection{Comptable}
+L'objectif du comptables et de maximiser les bénéfices de l'entreprise.
+Il suffit alors de maximiser la fonction de bénéfice définie précédemment.
+
+G(A) = 28 * X(A)
+G(B) = 20 * X(B)
+G(C) = 30 * X(C)
+G(D) = 37 * X(D)
+G(E) = 45 * X(E)
+G(F) = 22 * X(F)
+
+$CoutProduit(A) = (1~2~1)\cdot(3~4~2)^t = 13$
+CoutProduit(B) = 1 * 3 + 2 * 4 + 0 * 2 = 11
+CoutProduit(C) = 1 * 3 + 1 * 4 + 3 * 2 = 13
+CoutProduit(D) = 5 * 3 + 0 * 4 + 2 * 2 = 19
+CoutProduit(E) = 0 * 3 + 2 * 4 + 6 * 2 = 20
+CoutProduit(F) = 2 * 3 + 1 * 4 + 0 * 2 = 10
+
+CoupMachine(A) = 11 * 
+
 \subsection{Responsable d'atelier}
 L'objectif du responsable atelier est de maximiser le nombre de produits fabriqués.
 La fonction a maximiser est donc la suivante : \\
@@ -80,7 +99,7 @@ La fonction a minimiser est donc la suivante : \\
 $f(X) = 2\cdot \sum_{p\in E_{MP}} S(p)$ \\
 $f(X) = 5 X(A) + 6 X(B) + 8 X(D) + 9 X(E) + 4 X(F)$ \\
 
-Le stock ne peut etre négatif donc on contraint a etre supérieur à 0.
+Le stock ne peut être négatif donc on contraint a être supérieur à 0.
 Le minimum de cette fonction est alors 0. Il est donc nécessaire de rajouter
 des contraintes afin d'avoir un résultats réalistes.
 On contraint le système en prenant alors d'autres critères.
@@ -88,12 +107,14 @@ On peut maximiser le bénéfice ou la production par exemple.
 
 \subsection{Responsable commercial}
 L'objectif du responsable commercial est d'équilibrer les quantités faites par famille de produits.
-La quantité de production des produits A, B et C doit etre la meme que celle des produits D, E et F : \\
+La quantité de production des produits A, B et C doit être la même que celle des produits D, E et F : \\
 $X(A) + X(B) + X(C) = X(D) + X(E) + X(F)$ \\
 
 La fonction a minimiser est donc celle représentant la différence de production des deux familles : \\
 $f(X) = \mbox{abs}((X(A) + X(B) + X(C)) - (X(D) + X(E) + X(F))) $
 
 \subsection{Responsable du personnel}
+Le responsable du personnel souhaite limiter l'usage des machines 1 et 5.
+% TODO
 
 \end{document}
