--- a/rapport.tex
+++ b/rapport.tex
@@ -68,21 +68,28 @@ $$
 L'objectif du comptables et de maximiser les bénéfices de l'entreprise.
 Il suffit alors de maximiser la fonction de bénéfice définie précédemment.
 
-G(A) = 28 * X(A)
-G(B) = 20 * X(B)
-G(C) = 30 * X(C)
-G(D) = 37 * X(D)
-G(E) = 45 * X(E)
-G(F) = 22 * X(F)
+$G(X) = X\cdot(28~20~30~37~45~22)^t$ \\
 
-$CoutProduit(A) = (1~2~1)\cdot(3~4~2)^t = 13$
-CoutProduit(B) = 1 * 3 + 2 * 4 + 0 * 2 = 11
-CoutProduit(C) = 1 * 3 + 1 * 4 + 3 * 2 = 13
-CoutProduit(D) = 5 * 3 + 0 * 4 + 2 * 2 = 19
-CoutProduit(E) = 0 * 3 + 2 * 4 + 6 * 2 = 20
-CoutProduit(F) = 2 * 3 + 1 * 4 + 0 * 2 = 10
+$\mbox{CoutAchat}(A) = (1~2~1)\cdot(3~4~2)^t = 13$ \\
+$\mbox{CoutAchat}(B) = (1~2~0)\cdot(3~4~2)^t = 11$ \\
+$\mbox{CoutAchat}(C) = (1~1~3)\cdot(3~4~2)^t = 13$ \\
+$\mbox{CoutAchat}(D) = (5~0~2)\cdot(3~4~2)^t = 19$ \\
+$\mbox{CoutAchat}(E) = (0~2~6)\cdot(3~4~2)^t = 20$ \\
+$\mbox{CoutAchat}(F) = (2~1~0)\cdot(3~4~2)^t = 10$ \\
 
-CoupMachine(A) = 11 * 
+Valeurs fausses pour le moment car manque de conversion minute/heure. \\
+$CoupMachine(A) = (11~0~12~2~15~5~5)\cdot(2~2~1~1~2~3~1)^t = 86$ \\
+$CoupMachine(B) = (15~1~1~10~0~5~3)\cdot(2~2~1~1~2~3~1)^t = 61$ \\
+$CoupMachine(C) = (0~2~11~5~0~13~5)\cdot(2~2~1~1~2~3~1)^t = 64$ \\
+$CoupMachine(D) = (5~8~0~4~0~12~28)\cdot(2~2~1~1~2~3~1)^t = 94$ \\
+$CoupMachine(E) = (0~7~10~13~10~8~0)\cdot(2~2~1~1~2~3~1)^t = 71$ \\
+$CoupMachine(D) = (10~12~15~7~25~0~7)\cdot(2~2~1~1~2~3~1)^t = 123$ \\
+
+$P(X) = X\cdot\left((13~11~13~19~20~10) + (86~61~64~94~71~123)\right)^t$ \\
+$P(X) = X\cdot(99~72~77~113~91~133)^t$ \\
+
+$B(X) = G(X) - P(X)$ \\
+$B(X) = X\cdot\mbox{something}$ \\
 
 \subsection{Responsable d'atelier}
 L'objectif du responsable atelier est de maximiser le nombre de produits fabriqués.
