--- a/rapport.tex
+++ b/rapport.tex
@@ -93,7 +93,7 @@ $B(X) = X\cdot\mbox{something}$ \\
 
 \subsection{Responsable d'atelier}
 L'objectif du responsable atelier est de maximiser le nombre de produits fabriqués.
-La fonction a maximiser est donc la suivante : \\
+La fonction à maximiser est donc la suivante : \\
 $ f(X) = X(A) + X(B) + X(C) + X(D) + X(E) + X(F) $
 
 \subsection{Responsable des stocks}
