--- a/rapport.tex
+++ b/rapport.tex
@@ -31,7 +31,7 @@ et la recherche d'une solution de compromis satisfaisant chacun d'entre-eux. La
 dernière partie consistera en la sélection d'une solution finale parmis celles
 proposées précédemment.
 
-\section{Définition}
+\subsection{Définition}
 Nous définissons ici les notations que nous utiliserons dans la suite de ce
 rapport et exprimmons certaines notions sous forme de fonctions mathématiques.
 \\
@@ -64,7 +64,7 @@ $$
 \end{array}
 $$
 
-\section{Ensemble des contraintes}
+\subsection{Ensemble des contraintes}
 Cette section exprime sous forme mathématique les différentes contraintes
 inhérentes a fonctionnement de l'entreprise.
 
@@ -165,13 +165,14 @@ $$
 \end{array}
 $$
 
-sous les contraintes $$
-  \left\{
+sous les contraintes
+$$
+\left\{
     \begin{split}
-     A\cdot X \leq b\\ 
-     0 \leq X
+        A\cdot X \leq b\\
+        0 \leq X
     \end{split}
-  \right.
+\right.
 $$
 
 L'on obtient le résultat suivant : \\
@@ -252,6 +253,7 @@ avons choisis de traduire l’activité de l’entreprise grâce a son bénéfic
 
 % TODO rajouter l'image qu'il y a sur le drive
 % + donner une explication (donc changer un peu le paragraphe suivant
+\textbf{TODO} \\
 
 La solution est considérée comme viable si le benefice est au moins supérieur à
 70\% du bénéfice total. On remarque un point d’inflection pour un stock de
@@ -260,11 +262,15 @@ bénéfice maximum). Il n’est donc pas judicieux de chercher une solution avec
 un bénéfice plus élévé car cela entrainerais une augmentation beaucoup plus
 rapide des stocks. \\
 
-On trouve alors : $ X = (319.5453 ~0.3081 ~87.1207 ~0.0000 ~0.6821 ~0.0000)$
+On trouve alors : $ X = (319.5453 ~0.3081 ~87.1207 ~0.0000 ~0.6821 ~0.0000) $
 
 \subsection{Responsable du personnel}
 Le responsable du personnel souhaite limiter l'usage des machines 1 et 5.
 % TODO
-\\\textbf{TODO}
+\\ \textbf{TODO} \\
+
+\section{Programmation linéaire multicritère}
+
+\section{Analyse multicritère}
 
 \end{document}
