--- a/rapport.tex
+++ b/rapport.tex
@@ -25,10 +25,10 @@
 \section{Introduction}
 Cette étude se déroulera en trois parties. Dans la première nous considèrerons
 le nombre de produits de chaque type à produire pour optimiser les critères
-retens par chaque cadre de l'entreprise ADécision. La deuxième partie
+retenus par chaque cadre de l'entreprise ADécision. La deuxième partie
 comprendra une analyse de tous les critères considérés dans la première partie
 et la recherche d'une solution de compromis satisfaisant chacun d'entre-eux. La
-dernière partie consistera en la sélection d'une solution finale parmis celles
+dernière partie consistera en l d'une solution finale parmis celles
 proposées précédemment.
 
 \subsection{Définition}
@@ -66,7 +66,7 @@ $$
 
 \subsection{Ensemble des contraintes}
 Cette section exprime sous forme mathématique les différentes contraintes
-inhérentes a fonctionnement de l'entreprise.
+inhérentes au fonctionnement de l'entreprise.
 
 $$
 \begin{array}{r l}
@@ -230,12 +230,12 @@ ce qui correspond à 91,05\% du bénéfice maximal.
 
 \subsection{Responsable des stocks}
 Le responsable des stocks veut minimiser la taille des stocks, c'est à dire le
-nombre de produits ainsi que la quantité de matières premières stockés. L'on
-cherche aussi à garder un bénéfice positif permettant à l'entreprise de
+nombre de produits ainsi que la quantité de matières premières stockée. On
+cherche également à garder un bénéfice positif permettant à l'entreprise de
 continuer sa croissance. On considère alors la taille de stock initial au début
 de la semaine de production plus l'espace que prendront les produits fabriqués.
 
-La fonction a minimiser est donc la suivante : \\
+La fonction à minimiser est donc la suivante : \\
 $$
 \begin{array}{rl}
     f(X) = & 2\cdot \sum_{p\in E_{MP}} S(p) \\
@@ -244,22 +244,22 @@ $$
 \end{array}
 $$
 
-Le stock ne peut être négatif donc on contraint a être supérieur à 0. Le
+Le stock ne peut être négatif on le contraint donc à être supérieur à 0. Le
 minimum de cette fonction est alors 0. Or l'entreprise doit toujours pouvoir
-produire.Il est donc nécessaire de rajouter des contraintes afin d'avoir un
-résultats réalistes. On contraint le système en prenant alors d'autres
+produire. Il est ainsi nécessaire de rajouter des contraintes afin d'avoir un
+résultat réaliste. On contraint le système en prenant alors d'autres
 critères. On peut maximiser le bénéfice ou la production par exemple. Nous
-avons choisis de traduire l’activité de l’entreprise grâce a son bénéfice. \\
+avons choisi de traduire l’activité de l’entreprise grâce à son bénéfice. \\
 
 % TODO rajouter l'image qu'il y a sur le drive
 % + donner une explication (donc changer un peu le paragraphe suivant
 \textbf{TODO} \\
 
-La solution est considérée comme viable si le benefice est au moins supérieur à
+La solution est considérée comme viable si le bénéfice est au moins supérieur à
 70\% du bénéfice total. On remarque un point d’inflection pour un stock de
-407.2 unité correspondant a un bénéfice de 5742 unité d’argent (soit 88.7\% du
+407.2 unités correspondant à un bénéfice de 5742 unités d’argent (soit 88.7\% du
 bénéfice maximum). Il n’est donc pas judicieux de chercher une solution avec
-un bénéfice plus élévé car cela entrainerais une augmentation beaucoup plus
+un bénéfice plus élévé car cela entrainerait une augmentation beaucoup plus
 rapide des stocks. \\
 
 On trouve alors : $ X = (319.5453 ~0.3081 ~87.1207 ~0.0000 ~0.6821 ~0.0000) $
