Added second part of responsable personnel

--- a/rapport.tex
+++ b/rapport.tex
@@ -289,6 +289,25 @@ Par contre, cette solution ne donne pas assez de bénéfice pour l’entreprise,
 \newline
 Tenant en compte le bénéfice de l’entreprise, on souhaite ne pas souspasser 70\% du bénéfice maximum. Si on considère cette nouvelle contrainte et qu’on calcule les montants des produits à fabriquer, on reçoit le graph suivant:\\
 
+
+%TODO intégrer lìmage graphe_personnel_temps.png
+
+
+\newline
+Pour respecter les 70\% du benefice maximum, l’entreprise doit fabriquer un total de 343.1 produits. Par contre, le deuxième graphe nous montre que la machine 5 n’est pas du tout utilisée jusqu’aux 89\%. Puisqu’on souhaite utiliser les deux machines, on choisit un plan de production correspondant à 95,5\% pour raison de changement de la dérivée de la fonction du temps d’utilisation de la machine 5 à ce point-là.
+\nezwline
+Donc le plan de production de choix est le suivant:
+\newline
+
+$X = \begin{pmatrix}
+168.7394\\
+184.0703\\
+114.3787\\
+36.5623\\
+0.0000\\
+0.0000\\
+\end{pmatrix}$
+
 % TODO
 \\ \textbf{TODO} \\
 
