Ajout de la partie 3

--- a/rapport.tex
+++ b/rapport.tex
@@ -325,5 +325,6 @@ $X = (168 168.7394~ 184.0703~ 114.3787~ 36.5623~ 0.0000~ 0.0000)$
 \input{partie2/rapport}
 
 \section{Analyse multicritère}
+\input{partie3/rapport}
 
 \end{document}
